--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "private": true,
   "type": "module",
+  "scripts": {
+    "build": "ncc build index.js -o dist --license licenses.txt"
+  },
   "dependencies": {
     "@actions/core": "^1.10.0",
     "zx": "^7.2.1"
   },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.1"
+  },§
   "engines": {
     "node": ">=20"
   }
