Build minified dist

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
-  "type": "module",
   "scripts": {
-    "build": "ncc build index.js -o dist --license licenses.txt"
+    "build": "ncc build -m -o dist --license licenses.txt"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
